# Mini_PJT_8_Transitioning_from_Python_to_Rust

./: .coverage  Cargo.toml  HR_1.db  Makefile  README.md  main.py  requirements.txt  test_comparison.txt  test_main.py
.github/workflows/: Python.yml  Rust.yaml
mylib/: HR_1.db  extract.py  query.py  transform.py
src/: HR_1.csv  HR_1.db  lib.rs  main.rs
