[package]
name = "mini_pjt_7_rust_pilot_isl"  # 패키지 이름은 소문자 스네이크 케이스로
version = "0.1.0"
edition = "2021"

[dependencies]
# Command line argument parsing
clap = { version = "4.5.20", features = ["derive"] }

# HTTP requests with blocking mode
reqwest = { version = "0.11", features = ["blocking"] }

# Asynchronous runtime for tokio (used for compatibility with reqwest's async features if needed)
tokio = { version = "1", features = ["full"] }

# System monitoring (for memory and CPU usage)
sysinfo = "0.24"

# ETL pipeline support
csv = "1.1"          # For handling CSV files
rusqlite = "0.26"    # For working with SQLite databases
